--- a/generative_art_midterm/index.html
+++ b/generative_art_midterm/index.html
@@ -11,8 +11,8 @@
 <body>
 	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/two.js/0.4.0/two.min.js"></script>
 	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.3.10/p5.min.js"></script>
-	<script type="text/javascript" src="js/vendor/p5.sound.js"></script>
-	<script type="text/javascript" src="js/vendor/p5.dom.js"></script>
+	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.3.11/addons/p5.sound.min.js"></script>
+	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.3.11/addons/p5.dom.min.js"></script>
 	<script type="text/javascript" src="js/vendor/tween.min.js"></script>
 	<script type="text/javascript" src="js/sketch.js"></script>
 </body>
