Intro Scenes Finished
YAY

--- a/generative_art_midterm 2/index.html
+++ b/generative_art_midterm 2/index.html
@@ -39,27 +39,37 @@
 	<script type="text/javascript" src="js/vendor/tween.min.js"></script>
 	<script type="text/javascript" src="js/intro-sketch.js"></script>
 
-<!-- 	<div id="wrapper">
+	<div class="wrapper">
 	<section class="titleScreen">
-		<h1 id="test">Seasons</h1>
-		<h2>A browser enabled music visualizer </h2>
+		<h1 class="titleSlide">Seasons</h1>
+		<h2 class="tagSlide">A browser enabled music visualizer </h2>
 	</section>
 
 	<section class="pickerScreen">
-		<p>Pick a season, turn on your mic, play your music, enjoy</p>
+	
+		<p class ="description">Pick a season, turn on your mic, play your music, enjoy</p>
+		<div class="row">
+			<div class="col-3 spring">
+			<a href="seasons.html">Spring
+			</a>
+			</div>
 
-		<button>Spring
-		</button>
+			<div class="col-3 summer">
+			<a href="seasons.html">Summer
+			</a>
+			</div>
 
-		<button>Summer
-		</button>
+			<div class="col-3 fall">
+			<a href="seasons.html">Fall
+			</a>
+			</div>
 
-		<button>Fall
-		</button>
-
-		<button>Winter
-		</button>
+			<div class="col-3 winter">
+			<a href="seasons.html">Winter
+			</a>
+			</div>
+		</div>
 	</section>
-	</div> -->
+	</div>
 </body>
 </html>
