--- a/generative_art_midterm 2/index.html
+++ b/generative_art_midterm 2/index.html
@@ -37,9 +37,9 @@
 	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.3.11/addons/p5.sound.min.js"></script>
 	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.3.11/addons/p5.dom.min.js"></script>
 	<script type="text/javascript" src="js/vendor/tween.min.js"></script>
-	<script type="text/javascript" src="js/intro-sketch.js"></script>
+	<script type="text/javascript" src="js/sketch.js"></script>
 
-	<div class="wrapper">
+	<div id="wrapper">
 	<section class="titleScreen">
 		<h1 class="titleSlide">Seasons</h1>
 		<h2 class="tagSlide">A browser enabled music visualizer </h2>
@@ -50,22 +50,22 @@
 		<p class ="description">Pick a season, turn on your mic, play your music, enjoy</p>
 		<div class="row">
 			<div class="col-3 spring">
-			<a href="seasons.html">Spring
+			<a href="#" onclick="hideWrapper();">Spring
 			</a>
 			</div>
 
 			<div class="col-3 summer">
-			<a href="seasons.html">Summer
+			<a href="#" onclick="hideWrapper();">Summer
 			</a>
 			</div>
 
 			<div class="col-3 fall">
-			<a href="seasons.html">Fall
+			<a href="#" onclick="hideWrapper();">Fall
 			</a>
 			</div>
 
 			<div class="col-3 winter">
-			<a href="seasons.html">Winter
+			<a href="#" onclick="hideWrapper();">Winter
 			</a>
 			</div>
 		</div>
