--- a/generative_art_midterm 2/index.html
+++ b/generative_art_midterm 2/index.html
@@ -8,14 +8,48 @@
         <title>Seasons Visualizer</title>
         <meta name="description" content="A music visualizer for your viewing pleasure. Play on some jams, turn on your mic, and sit back. ">
 
-        <!-- Web Fonts
+        <!-- JQUERY, GUI and Typekit
         ================================================== -->
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+		<script type="text/javascript" src="js/vendor/dat.gui.js"></script>
         <script src="//use.typekit.net/eae4twn.js"></script>
 		<script>try{Typekit.load();}catch(e){}</script>
 
-        <!-- Favicons
-        ================================================== -->
-        <link rel="shortcut icon" href="images/favicon.ico">
+        
+
+
+
+<script type="text/javascript">
+
+	var h = $(window).height();
+
+	$(document).ready(function(){
+
+		splashsize();
+
+		
+
+		function splashsize(){
+			$('.splash-page').css('min-height',h)
+		};
+
+		$(".contributers").click(function(){
+			$(".titleScreen").addClass("animatedout fadeOutLeft");
+			$(".cont-page").removeClass("hidden");
+		});
+
+		
+
+		$(".back").click(function(){
+			$(".cont-page").addClass("hidden");
+			$(".titleScreen").removeClass("animated fadeInUp animatedout fadeOutLeft");
+			$(".titleScreen").addClass("animated fadeInUp");
+		});
+
+
+	}); // End of Document Ready
+	</script>
+
 
         <!-- CSS/ SASS
         ================================================== -->
@@ -39,15 +73,16 @@
 	<script type="text/javascript" src="js/vendor/tween.min.js"></script>
 	<script type="text/javascript" src="js/sketch.js"></script>
 
-	<div id="wrapper">
+	<div id="wrapper" class="splash-page">
+
+
 	<section class="titleScreen">
 		<h1 class="titleSlide">Seasons</h1>
 		<h2 class="tagSlide">A browser enabled music visualizer </h2>
-	</section>
-
-	<section class="pickerScreen">
 	
-		<p class ="description">Pick a season, turn on your mic, play your music, enjoy</p>
+
+	<div class="pickerScreen">
+		<p class ="description">Pick a season, turn on your mic, play some music. Enjoy. A Google Chrome.</p>
 		<div class="row">
 			<div class="col-3 spring">
 			<a href="#" onclick="hideWrapper();">Spring
@@ -69,7 +104,37 @@
 			</a>
 			</div>
 		</div>
+		</br>
+		<h3 class=" contributers">Contributers</h3>
+	</div>
 	</section>
+
+	<div class=" wrapper cont-page hidden">
+
+			<h2 class="nolink">Created By:</h2>
+			<p>
+			<a href="http://scottbrookshiredesign.com" target="_blank" >Scott Brookshire</a> + 
+			<a href="http://thatryanjones.com" target="_blank" >Ryan Jones</a></p>
+			</br>
+			<h2 class="nolink">With Contributions by:</h2>
+			<p>
+			<a href="http://http://rybotron.com/" target="_blank" >Ryan Berkey</a>, and inspiration from
+			<a href="http://p5art.tumblr.com/" target="_blank" >Jerome Herr</a>
+			</br>
+		
+				
+
+			</p>
+			<svg class="back" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+			viewBox="-909 491 100 100" enable-background="new -909 491 100 100" xml:space="preserve">
+			<g id="Captions">
+			</g>
+			<g id="Your_Icon">
+			<polygon fill="#EFDFC2" points="-820.7,524 -889.1,524 -856,490.9 -858.1,488.8 -892.6,523.3 -894.7,525.4 -892.6,527.5 
+			-858.1,562.1 -856,560 -889.1,526.9 -820.7,526.9 	"/>
+			</g>
+			</svg>
+	</div>	
 	</div>
 </body>
 </html>
