Everything's Done... But its broken in Chrome.
Firefox is working…

--- a/generative_art_midterm 2/index.html
+++ b/generative_art_midterm 2/index.html
@@ -82,7 +82,8 @@
 	
 
 	<div class="pickerScreen">
-		<p class ="description">Pick a season, turn on your mic, play some music. Enjoy. A Google Chrome.</p>
+		<p class ="description">Pick Fall, turn on your mic, play some music. Enjoy. A Google Chrome experiment.</p>
+		<p class ="description sub">Other seasons currently in development.</p>
 		<div class="row">
 			<div class="col-3 spring">
 			<a href="#" onclick="hideWrapper();">Spring
