Minor updates to Firefox

--- a/generative_art_midterm 2/index.html
+++ b/generative_art_midterm 2/index.html
@@ -66,9 +66,8 @@
 
 </head>
 <body>
-	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/two.js/0.4.0/two.min.js"></script>
-	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.3.10/p5.min.js"></script>
-	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.3.11/addons/p5.sound.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.3.15/p5.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.3.15/addons/p5.sound.js"></script>
 	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.3.11/addons/p5.dom.min.js"></script>
 	<script type="text/javascript" src="js/vendor/tween.min.js"></script>
 	<script type="text/javascript" src="js/sketch.js"></script>
@@ -83,7 +82,7 @@
 
 	<div class="pickerScreen">
 		<p class ="description">Pick Fall, turn on your mic, play some music. Enjoy. A Google Chrome experiment.</p>
-		<p class ="description sub">Other seasons currently in development.</p>
+		<p class ="description sub">Other seasons currently in development. Also works with Firefox.</p>
 		<div class="row">
 			<div class="col-3 spring">
 			<a href="#" onclick="hideWrapper();">Spring
