--- a/generative_art_midterm 2/index.html
+++ b/generative_art_midterm 2/index.html
@@ -5,7 +5,7 @@
         ================================================== -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Seasons Visualizer</title>
+        <title>Fall Visualizer</title>
         <meta name="description" content="A music visualizer for your viewing pleasure. Play on some jams, turn on your mic, and sit back. ">
 
         <!-- JQUERY, GUI and Typekit
@@ -76,33 +76,21 @@
 
 
 	<section class="titleScreen">
-		<h1 class="titleSlide">Seasons</h1>
-		<h2 class="tagSlide">A browser enabled music visualizer </h2>
+		<h1 class="titleSlide">Rythm</h1>
+		<h2 class="tagSlide">A browser based music visualizer </h2>
 	
 
 	<div class="pickerScreen">
-		<p class ="description">Pick Fall, turn on your mic, play some music. Enjoy. A Google Chrome experiment.</p>
-		<p class ="description sub">Other seasons currently in development. Also works with Firefox.</p>
+		<p class ="description">Turn on your mic, play some music. Enjoy.</p>
+		<p class ="description sub">A Google Chrome experiment. Also works with Firefox.</p>
 		<div class="row">
-			<div class="col-3 spring">
-			<a href="#" onclick="hideWrapper();">Spring
+			
+			<div class="button fall">
+			<a href="#" onclick="hideWrapper();">Start
 			</a>
+			
 			</div>
 
-			<div class="col-3 summer">
-			<a href="#" onclick="hideWrapper();">Summer
-			</a>
-			</div>
-
-			<div class="col-3 fall">
-			<a href="#" onclick="hideWrapper();">Fall
-			</a>
-			</div>
-
-			<div class="col-3 winter">
-			<a href="#" onclick="hideWrapper();">Winter
-			</a>
-			</div>
 		</div>
 		</br>
 		<h3 class=" contributers">Contributers</h3>
