--- a/generative_art_midterm 2/index.html
+++ b/generative_art_midterm 2/index.html
@@ -82,7 +82,7 @@
 
 	<div class="pickerScreen">
 		<p class ="description">Turn on your mic, play some music. Enjoy.</p>
-		<p class ="description sub">A Google Chrome experiment. Also works with Firefox.</p>
+		<p class ="description sub">A Google Chrome experiment.</p>
 		<div class="row">
 			
 			<div class="button fall">
@@ -124,5 +124,18 @@
 			</svg>
 	</div>	
 	</div>
+
+
+	        <!-- GOOGLE ANALYTICS
+        ================================================== -->
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-42785587-1', 'auto');
+          ga('send', 'pageview');
+        </script>
 </body>
 </html>
